# Aria

./: ARCHITECTURE.md  Aria  CMakeCache.txt  CMakeLists.txt  PHASE_0_COMPLETE.md  README.md  THIRD-PARTY-NOTICES.md  cmake_install.cmake  test  test.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Aria_autogen/: deps  mocs_compilation.cpp
Aria_autogen/CKOEOPEOYL/: moc_brushpanel.cpp.d  moc_layerpanel.cpp.d
Aria_autogen/IYECXEJARV/: moc_welcomedialog.cpp.d
Aria_autogen/OCEW5ANPER/: moc_shortcutmanager.cpp.d
Aria_autogen/PRMOGMWJPH/: moc_brush.cpp.d  moc_canvas.cpp.d  moc_layermanager.cpp.d
Aria_autogen/RZ4CM6YYJ6/: moc_ariacolorpicker.cpp.d  moc_hsvcolorpicker.cpp.d
Aria_autogen/YPKJ5OE7LN/: moc_mainwindow.cpp.d
resources/: resources.qrc
resources/stylesheets/: dark_theme.qss
src/: main.cpp
src/core/: brush.cpp  brush.h  canvas.cpp  canvas.h  canvas_methods.cpp  layer.cpp  layer.h  layermanager.cpp  layermanager.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow_fileops.cpp  mainwindow_select.cpp
src/ui/dialogs/: welcomedialog.cpp  welcomedialog.h
src/ui/panels/: brushpanel.cpp  brushpanel.h  layerpanel.cpp  layerpanel.h
src/utils/shortcuts/: shortcutmanager.cpp  shortcutmanager.h
src/widgets/: ariacolorpicker.cpp  ariacolorpicker.h  hsvcolorpicker.cpp  hsvcolorpicker.h
